applications/plausible-kubernetes/clickhouse.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: clickhouse-statefulset
  labels:
    app: clickhouse
spec:
  serviceName: "clickhouse"
  replicas: 1
  selector:
    matchLabels:
      app: clickhouse
  template:
    metadata:
      labels:
        app: clickhouse
    spec:
      containers:
        - name: clickhouse
          image: clickhouse/clickhouse-server:22.6-alpine

          ports:
            - containerPort: 9000
              name: native
            - containerPort: 8123
              name: http
          volumeMounts:
            - name: pv-data
              mountPath: /var/lib/clickhouse
            - name: clickhouse-config-vol
              mountPath: "/etc/clickhouse-server"
              readOnly: true
      volumes:
        - name: pv-data
          persistentVolumeClaim:
            claimName: clickhouse-pvc
          volumes:
        - name: clickhouse-config-vol
          configMap:
            name: clickhouse-config
            items:
            - key: "config.xml"
              path: "config.xml"
            - key: "users.xml"
              path: "users.xml"

---
apiVersion: v1
kind: Service
metadata:
  name: clickhouse-service
  labels:
    app: clickhouse
spec:
  ports:
    - port: 9000
      name: native
    - port: 8123
      name: http
  type: ClusterIP
  selector:
    app: clickhouse
