applications/plausible-kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plausible
  annotations:
    cert-manager.io/issuer: cloudflare
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: https
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: analytics.home.juli.sh # your custom dns address (e.g. plausible.example.com)
      http:
        paths:
          - backend:
              service:
                name: plausible
                port:
                  number: 8000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - analytics.home.juli.sh
      secretName: plausible-analytics-cert
